# fun_apple

./: .gitignore  README.md  TODO.md  debug_check.py  pyproject.toml  run.py
src/: add_visuals.py  extract_data.py  generate_embeddings.py  inference.py  mapper_model.py  train_mapper.py
