[project]
name = "stable-diffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "diffusers>=0.36.0",
    "laion-clap>=1.1.7",
    "librosa>=0.11.0",
    "numpy<2.4",
    "opencv-python>=4.11.0.86",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.0.0",
]
